# domains/order/order-application/src/main/kotlin/devcoop/occount/order/application/shared/SalesRankingType.kt
@@ -1,0 +1,6 @@
+package devcoop.occount.order.application.shared
+
+enum class SalesRankingType {
+    POPULAR,
+    UNPOPULAR,
+}
